UXKM HTML 추가 작업

--- a/ukncs/css/uk.css
+++ b/ukncs/css/uk.css
@@ -80,6 +80,8 @@ etc
 .ukbody hr{margin:40px 0;border-color:#000;}
 .ukbody .note{overflow:auto;position:relative;margin:1em auto;padding:.5em;border:.5em;border-left-style:solid;border-color:#52e052;background:#e9fbe9;line-height:24px;text-align:left;page-break-inside:avoid;}
 .ukbody .note p{padding:0;}
+.ukbody .note a{vertical-align: text-top;}
+.ukbody .note abbr{vertical-align: middle;}
 .ukbody .note.advisement{border-color:#f6b73c;background:#fff3d4;}
 .ukbody .note::before,
 .ukbody .note::after,
@@ -98,7 +100,7 @@ etc
 .ukbody pre::before{content:"";display:block;position:absolute;top:0;left:0;width:5px;height:100%;background:#3d7e9a;}
 .ukbody pre code{overflow-x:auto;display:block;margin:0;margin-top:-20px;padding:0;border:0;color:inherit;line-height:24px;text-align:left;vertical-align:middle;}
 .ukbody pre span{color:#3d7e9a;vertical-align:middle;}
-.ukbody pre b{color:#3d7e9a;font-weight:700;}
+.ukbody pre b{color:#3d7e9a;font-weight:700;vertical-align:middle;}
 .ukbody .advisement pre{background:#fff3d4;}
 .ukbody .advisement pre::before{background:#f6b73c;}
 .ukbody .advisement pre i{color:red;}
@@ -127,6 +129,17 @@ etc
 .ukbody svg p{margin:0.75em 0 0 0;padding:0 0 0 1em;font:italic 14px sans-serif;}
 
 .coming{padding:80px 0;text-align:center;}
+[target="_blank"]::after{
+	content:"";
+	display:inline-block;
+	width:12px;
+	height:20px;
+	margin-top:3px;
+	margin-left:3px;
+	background:url(../images/icon/ico_external_link.svg) no-repeat 0 0;
+	background-size:12px;
+	vertical-align:text-top;
+}
 
 @media (max-width:1024px){
 	.uk-toc{left:-400px;}
