--- a/ukncs/css/uk.css
+++ b/ukncs/css/uk.css
@@ -62,7 +62,7 @@ etc
 /* Layout - Footer */
 .ukfooter{padding:15px;border-top:2px solid #222;text-align:center;}
 /* UKMain */
-.ukbody h3{display:inline-block;padding:0;padding-right:5px;background-color:#fff;font-size:20px;font-weight:700;}
+.ukbody h3{display:inline-block;position:relative;z-index:1;padding:0;padding-right:5px;background-color:#fff;font-size:20px;font-weight:700;}
 .ukbody h3::before{counter-increment:h3;content:counter(h3)". ";}
 .uksection{overflow-x:auto;margin-top:-12px;padding:15px;border:2px solid #ccc;counter-reset:h4;}
 .uksection h4{padding:10px 0;font-size:18px;font-weight:700;}
@@ -75,6 +75,8 @@ etc
 .ukmain blockquote p::before{content:"\201C";position:absolute;margin:-10px 0 0 -25px;font-size:3em;font-family:Georgia;color:#bcbcbc;}
 .ukmain blockquote p::after{content:"\201D";position:absolute;margin: 0 0 0 5px;font-size:3em;font-family:Georgia;color:#bcbcbc;}
 .ukbody article{}
+.ukbody strong,
+.ukbody b{font-weight:700;}
 .ukbody p{line-height: 22px;}
 .ukbody p strong{vertical-align:baseline;}
 .ukbody hr{margin:40px 0;border-color:#000;}
@@ -87,6 +89,7 @@ etc
 .ukbody .note::after,
 .ukbody .note p::before,
 .ukbody .note p::after{display:none;}
+.ukbody .code{display:block;margin:0;padding:10px;border:1px solid #ddd;background:#f5f5f5;line-height:24px;}
 .ukbody ul{padding:15px;padding-top:0;counter-reset:cntlist;}
 .ukbody ul li{position:relative;margin:4px 0;padding-left:20px;line-height:24px;}
 .ukbody ul li::before{counter-increment:cntlist;content:counter(cntlist)". ";position:absolute;top:0;left:0;}
