--- a/ukncs/css/ukReset.css
+++ b/ukncs/css/ukReset.css
@@ -167,12 +167,12 @@ iframe{
 }
 
 /* Block formatting context Text Hidden */
-[hidden],
 .hide,
 .hidden,
 .blind,
 .tts{
 	overflow:hidden!important;
+	display:inline-block!important;
 	position:absolute!important;
 	width:1px!important;
 	height:1px!important;
