- 메인 작업 중(km)

--- a/assets/lib/css/less/color.less
+++ b/assets/lib/css/less/color.less
@@ -2,9 +2,12 @@
 
 //color set
 @blue: #1e73ff;
+@skyBlue: #379ad6;
+@darkBlue: #4961dd;
 
-@green: #38CB4D;
-@red: #ff3b32;
-@yellow: #fff000;
-@white: #fff;
-@black:#222;
+@red:#e44d26;
+@orange:#f79d30;
+@green:#00986b;
+@yellow:#fff000;
+@white:#fff;
+@black:#000;
