--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -37,7 +37,11 @@ blockquote, q {quotes:none;}
 blockquote:before, blockquote:after, q:before, q:after {content:'';}
 table {border-collapse:collapse; border-spacing:0;}
 a, a:hover, a:active, a:focus {text-decoration:none; vertical-align:top;}
-.hide, .sound_only, .hidden {position:absolute; top:-9999px; display:block; width:0; height:0; margin:0; padding:0; line-height:0; font-size:0; text-indent:-9999px;}
+//.hide, .sound_only, .hidden {position:absolute; top:-9999px; display:block; width:0; height:0; margin:0; padding:0; line-height:0; font-size:0; text-indent:-9999px;}
+.hide, .sound_only, .hidden {
+	overflow:hidden; display:inline-block; margin:-1px; width:1px; height:1px;
+	border:0; line-height:1; clip:rect(1px, 1px, 1px, 1px); clip-path:inset(50%);
+}
 img {height:auto; border:0; vertical-align:top;}
 button {margin:0; padding:0; border:0; background:none; vertical-align:top;}
 textarea, input, select {vertical-align:top;}
@@ -115,6 +119,6 @@ input[type="range"] {
 
 
 //Skip Navigation
-.uk-skip{position:absolute;width:100%;margin:-1px 0 0 0;z-index:1000;}
-.uk-skip a{overflow:hidden;display:block;width:1px;height:1px;padding:0;text-align:center;white-space:nowrap;}
-.uk-skip a:hover,.uk-skip a:active,.uk-skip a:focus{width:auto;height:auto;margin:1px 0 0 0;padding:5px 10px;line-height:normal;background:#036;font-size:inherit;color:#fff;}
+.uk-skip {position:absolute;width:100%;margin:-1px 0 0 0;z-index:1000;}
+.uk-skip a {overflow:hidden;display:block;width:1px;height:1px;padding:0;text-align:center;white-space:nowrap;}
+.uk-skip a:hover,.uk-skip a:active,.uk-skip a:focus {width:auto;height:auto;margin:1px 0 0 0;padding:5px 10px;line-height:normal;background:#036;font-size:inherit;color:#fff;}
