--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -39,7 +39,7 @@ table {border-collapse:collapse; border-spacing:0;}
 a, a:hover, a:active, a:focus {text-decoration:none; vertical-align:top;}
 //.hide, .sound_only, .hidden {position:absolute; top:-9999px; display:block; width:0; height:0; margin:0; padding:0; line-height:0; font-size:0; text-indent:-9999px;}
 .hide, .sound_only, .hidden {
-	overflow:hidden; display:inline-block; margin:-1px; width:1px; height:1px;
+	overflow:hidden; display:inline-block; position:absolute; margin:-1px; width:1px; height:1px;
 	border:0; line-height:1; clip:rect(1px, 1px, 1px, 1px); clip-path:inset(50%);
 }
 img {height:auto; border:0; vertical-align:top;}
