--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -426,11 +426,12 @@
 			}
 		}
 	}
-	.main_content .uk_footer .nav {
+	.main_page .uk_footer .nav {
 		max-width:@conWidth -  (@pc_padding/2); margin:0 auto;
+		background:transparent;
 		&:before {
 			position:absolute; left:@pc_padding; right:@pc_padding; top:0;
-			height:1px; background:rgba(255,255,255,.2);
+			height:1px; background:rgba(255,255,255,.15);
 			content:"";
 		}
 	}
@@ -474,35 +475,29 @@
 
 
 //main ----------------------------------------------------------------------------------------//
-	.main_content {
-		position:relative; z-index:1;
-		text-align:center;
+	.main_page {
 		background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
 		background-size:cover;
 		background-attachment:fixed;
-		//transition:background-color .8s ease-in-out, background-image .8s ease-in-out;
-		&.info_scroll {
-			background-image:unset;
-			background-color:#fff;
-		}
+	}
+	.main_content {
+		position:relative; z-index:1;
+		text-align:center;
 		> article {position:relative;}
 	}
 	@media (max-width: @screen-sm-max){
-		.device .main_content {
-			//background:none;
-			&:before {
-				display:none;
-				position:fixed; left:0; top:0; right:0; height:100vh;
-				background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
-				background-size:cover;
-				background-attachment:fixed;
-				content:"";
-			}
+		.main_page:before {
+			display:none;
+			position:fixed; left:0; top:0; right:0; height:100vh;
+			background:url('@{bg-url}/main_top_bg.jpg') no-repeat center top;
+			background-size:cover;
+			background-attachment:fixed;
+			content:"";
 		}
 	}
 
 
-	//intro
+	//intro -----------//
 	.main_intro {
 		@pb:120px;
 		min-height:700px; z-index:2;
@@ -622,8 +617,7 @@
 	}
 
 
-
-	//info
+	//info -----------//
 	@main_info_p:20px;
 	@main_info_w:940px + (@main_info_p*2);
 	.main_info {
@@ -710,10 +704,9 @@
 			100% {opacity:1;}
 		}
 	}
-	//ie 제외 에니메이션 적용
+	//ie외 브라우저 에니메이션 적용
 	.ie_no .main_info {
 		.keyboard {
-			//span i:before {opacity:0;}
 			//animation
 			.step1 i {.keyboardStep(keyStep1, 2%, 4.2s);}
 			.step2 i {.keyboardStep(keyStep2, -1.6%, 4.6s);}
@@ -743,7 +736,7 @@
 			}
 		}
 	}
-	@media(max-width:550px){
+	@media(max-width:@screen-sm-max){
 		.main_info .keyboard {display:none;}
 	}
 	@media(max-width:550px){
@@ -774,8 +767,7 @@
 		}
 	}
 
-
-	//keyboard moving
+	//keyboard moving animation
 	.keyboardApp(@name, @speed){
 		-webkit-animation:@name @speed ease-in-out infinite;
 		-moz-animation:@name @speed ease-in-out infinite;
@@ -792,7 +784,7 @@
 		}
 		.keyboardApp(@name, @speed);
 	}
-	//keyboard background
+	//keyboard background animation
 	.keyboardBgApp(@name, @speed, @delay){
 		-webkit-animation:@name @speed @delay cubic-bezier(.45,.1,.35,.98) both;
 		-moz-animation:@name @speed @delay cubic-bezier(.45,.1,.35,.98) both;
@@ -807,17 +799,65 @@
 	}
 
 
-
-
-
-
-
-
-
-	//editor
+	//editor -----------//
 	.main_editor {
 		z-index:2;
+		padding:130px 0;
+		h2, .txt {max-width:900px; margin:0 auto;}
+		h2 {
+			display:block;
+			&:before {font-size:110px; color:@blue; content:"\f121";}
+			span {
+				display:block; line-height:100%; margin-top:7%;
+				.font-tit; font-size:90px; color:#fff; font-weight:normal;
+			}
+			i {color:@blue;}
+		}
+		.txt {
+			display:inline-block; width:100%; padding:0 10px;
+			p:first-child {margin-top:5%;}
+			p {
+				line-height:180%;
+				font-size:20px; color:rgba(255,255,255,.85); font-weight:300; letter-spacing:-0.5px;
+				b {color:lighten(@blue, 10%);}
+				i {display:inline-block; position:relative; vertical-align:top;}
+				i:before {
+					position:absolute; left:-2px; right:-2px; bottom:12%; z-index:-1;
+					height:22%;
+					background:fade(@blue, 70%); border-radius:3px;
+					content:"";
+				}
+			}
+		}
+
+		.editor_wrap {
+			max-width:1400px; margin:0 auto; padding:0 @pc_padding;
+			text-align:left;
+			.uk_editor {margin-top:7%;}
+		}
 	}
+	//반응형 텍스트
+	@media(max-width:900px){
+		.main_editor {
+			padding:13.5% 0;
+			h2 {
+				&:before {font-size:12vw;}
+				span {font-size:10.0vw;}
+			}
+			.txt p {font-size:2.2vw;}
+		}
+	}
+	@media(max-width:680px){
+		.main_editor {
+			.txt p {font-size:15px;}
+		}
+	}
+
+
+
+
+
+	.main_created {background:#fff;}
 
 
 
